--- a/style-mobile.css
+++ b/style-mobile.css
@@ -12,7 +12,12 @@ body{
 .logo{
     justify-self:center;
 }
-#donate-today-button{
+.donate-today-button{
+    position: absolute;
+    width: 10rem;
+    height: 3rem;
+    top: 53%;
+    left: 3%;
     grid-column:1/3;
 }
 .one{
@@ -95,6 +100,7 @@ body{
     position: relative;
     align-items: center;
 }
+
 .first-img{
     position: absolute;
     top: 18%;
@@ -122,6 +128,23 @@ body{
     gap: 3rem;
     text-align: center;
     align-items: center;
+    position: relative;
+}
+.did-you-know{
+    position: absolute;
+    background: #354463 0% 0% no-repeat padding-box;
+    opacity: 1;
+    height: 2rem;
+    width: 7rem;
+    top: -11%;
+    left: 33%;
+}
+.did-you-know-text{
+    text-align: center;
+    font: normal normal normal 12px/12px Helvetica;
+    letter-spacing: 0.56px;
+    color: #FFFFFF;
+    opacity: 1;
 }
 .hunger-issue{
     width: 90%;
@@ -133,6 +156,23 @@ body{
     align-items: center;
     text-align: center;
     padding: 5%;
+    position: relative;
+}
+.stories{
+    position: absolute;
+    background: #354463 0% 0% no-repeat padding-box;
+    opacity: 1;
+    height: 2rem;
+    width: 7rem;
+    top: 3%;
+    left: 33%;
+}
+.stories-text{
+    text-align: center;
+    font: normal normal normal 12px/12px Helvetica;
+    letter-spacing: 0.56px;
+    color: #FFFFFF;
+    opacity: 1;
 }
 
 .img{
@@ -177,6 +217,9 @@ body{
     grid-row: 3/7;
 
 }
+.screen-four-rect-1{
+    position: relative;
+}
 .eight{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -206,12 +249,13 @@ body{
 }
 .donate-today-text{
     text-align: center;
-    font: normal normal bold 18px/22px Helvetica;
+    font: normal normal bold 18px/7px Helvetica;
     letter-spacing: 0px;
     color: #354463;
     opacity: 1;
 }
 .zero{
+    position: relative;
 
 }
 .one{
